apps/staging-whoami/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: whoami
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/"
    spec:
      serviceAccountName: whoami-sa
      automountServiceAccountToken: false
      containers:
      - name: whoami
        image: traefik/whoami:v1.10.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "384Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: staging
spec:
  selector:
    app: whoami
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-route
  namespace: staging
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
  hostnames:
  - "test.wminor.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: whoami
      port: 80
